spring-cloud-sample/spring-cloud-zipkin/src/main/jkube/spring-cloud-zipkin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-zipkin
  namespace: bjrdc-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-cloud-zipkin
  template:
    metadata:
      labels:
        app: spring-cloud-zipkin
    spec:
      containers:
      - name: zipkin-server
        image: bjrdc206.reg/bjrdc-dev/spring-cloud-zipkin:0.0.1-SNAPSHOT
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8082
