spring-cloud-sample/spring-cloud-zipkin/src/main/jkube/sc-zipkin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-cloud-zipkin
  namespace: bjrdc-dev
spec:
  selector:
    app: spring-cloud-zipkin
  ports:
  - name: http
    port: 8082
