spring-cloud-sample/spring-cloud-zipkin/src/main/jkube/spring-cloud-zipkin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sc-zipkin-ingress
  namespace: bjrdc-dev
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20M"
spec:
  rules:
  - host: ingress.bjrdc17
    http:
      paths:
      - path: /sc-zipkin
        backend:
          serviceName: spring-cloud-zipkin
          servicePort: 8082
